--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "motion": "^11.13.1",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
