--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "champola",
+  "name": "finpay",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "motion": "12.0.0-alpha.2",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.4"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.2",
@@ -30,20 +30,20 @@
     "@storybook/react": "8.4.5",
     "@storybook/test": "8.4.5",
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "eslint": "^8",
+    "@types/node": "^20.17.9",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-storybook": "^0.11.1",
     "postcss": "^8.4.49",
     "storybook": "8.4.5",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react": "npm:types-react@19.0.0",
+      "@types/react-dom": "npm:types-react-dom@19.0.0"
     }
   }
 }
